--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,8 @@
     "angular-route": "~1.5.0",
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0"
+    "html5-boilerplate": "^5.3.0",
+    "angular-ui-tinymce": "^0.0.18",
+    "pdfmake": "~0.1.25"
   }
 }
