--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "angular-seed",
   "private": true,
   "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
-  "license": "MIT",
+  "description": "",
+  "repository": "",
+  "license": "",
   "devDependencies": {
     "bower": "^1.7.7",
     "http-server": "^0.9.0",
